--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>ISLAND SLOTS</h1>
     <div class="board">
         <div id="purse">PURSE: 1000</div>
+        <div id="winnings">Winnings: 0</div>
         <h2 id="winLose">YOU LOSE</h2>
         <button id="reset">RESET</button>
         <!-- <div class="spinners"> -->
@@ -29,6 +30,7 @@
             <button id="wager3">50</button>
             <!-- <div id="wager4">50</div> -->
         <!-- </div> -->
+        <div id="currentWager">wager</div>
         <button id="play">PLAY</button>
     </div>
 </body>
