--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
     <script defer src="slots.js"></script>
 </head>
 <body>
+    <audio src="sound/lose.mp3" id="loseSound"></audio>
+    <audio src="sound/slot-machine-payout.mp3" id="coinSound"></audio>
+    <audio src="sound/success-fanfare.mp3" id="winSound"></audio>
+    
     <h1>ISLAND SLOTS</h1>
     <div class="board">
         <div id="purse">PURSE: 1000</div>
-        <div id="winnings">Winnings: 0</div>
+        <div id="winnings">WINNINGS: 0</div>
         <h2 id="winLose">YOU LOSE</h2>
         <button id="reset">RESET</button>
         <!-- <div class="spinners"> -->
-            <img id="spin1" src="img/pineapple.png">
-            <img id="spin2" src="img/pineapple.png">
-            <img id="spin3" src="img/pineapple.png">
+            <img id="spin1" class ="spinners" src="img/pineapple.png">
+            <img id="spin2" class ="spinners" src="img/banana.png">
+            <img id="spin3" class ="spinners" src="img/mango.png">
 
         <!-- </div> -->
         <!-- <div class="bets"> -->
-            <button id="wager1">10</button>
-            <button id="wager2">20</button>
-            <button id="wager3">50</button>
+            <button id="wager1" class="bets">10</button>
+            <button id="wager2" class="bets">20</button>
+            <button id="wager3" class="bets">50</button>
             <!-- <div id="wager4">50</div> -->
         <!-- </div> -->
-        <div id="currentWager">wager</div>
+        <div id="currentWager">WAGER</div>
         <button id="play">PLAY</button>
     </div>
 </body>
