--- a/index.html
+++ b/index.html
@@ -15,27 +15,37 @@
     <audio src="sound/lose.mp3" id="loseSound"></audio>
     <audio src="sound/slot-machine-payout.mp3" id="coinSound"></audio>
     <audio src="sound/success-fanfare.mp3" id="winSound"></audio>
-    
+
     <h1>ISLAND SLOTS</h1>
     <div class="board">
-        <div id="purse">PURSE: 1000</div>
-        <div id="winnings">WINNINGS: 0</div>
+        <div id="purse" class="cells">PURSE: 1000</div>
+        <div id="winnings" class="cells">WINNINGS: 0</div>
         <h2 id="winLose">YOU LOSE</h2>
         <button id="reset">RESET</button>
-        <!-- <div class="spinners"> -->
+        <div class="spinMain">
             <img id="spin1" class ="spinners" src="img/pineapple.png">
+            <img id="spintest" class ="spinners" src="img/banana.png">
+            <img id="spintest1" class ="spinners" src="img/mango.png">
+        </div>
+        <div class="spinMain2">
             <img id="spin2" class ="spinners" src="img/banana.png">
-            <img id="spin3" class ="spinners" src="img/mango.png">
-
-        <!-- </div> -->
+            <img id="spintest2" class ="spinners" src="img/pineapple.png">
+            <img id="spintest3" class ="spinners" src="img/mango.png">
+        </div>
+        <div class="spinMain3">   
+            <img id="spin3" class ="spinners" src="img/mango.png"> 
+            <img id="spintest4" class ="spinners" src="img/pineapple.png">           
+            <img id="spintest5" class ="spinners" src="img/banana.png">
+        </div>  
+  
         <!-- <div class="bets"> -->
             <button id="wager1" class="bets">10</button>
             <button id="wager2" class="bets">20</button>
             <button id="wager3" class="bets">50</button>
             <!-- <div id="wager4">50</div> -->
         <!-- </div> -->
-        <div id="currentWager">WAGER</div>
-        <button id="play">PLAY</button>
+        <div id="currentWager" class="cells">WAGER</div>
+        <button id="play" class="cells">PLAY</button>
     </div>
 </body>
 </html>
