--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href ="style.css">
     <script defer src="slots.js"></script>
 </head>
-<body>
+<body id="body">
     <audio src="sound/lose.mp3" id="loseSound"></audio>
     <audio src="sound/slot-machine-payout.mp3" id="coinSound"></audio>
     <audio src="sound/success-fanfare.mp3" id="winSound"></audio>
@@ -27,8 +27,8 @@
         <img id="spin2" class ="spinners" src="img/banana.png">
         <img id="spin3" class ="spinners" src="img/mango.png"> 
           
-        <button id="wager1" class="bets">10</button>
-        <button id="wager2" class="bets">20</button>
+        <button id="wager1" class="bets">20</button>
+        <button id="wager2" class="bets">35</button>
         <button id="wager3" class="bets">50</button>
 
         <div id="currentWager" class="cells">WAGER</div>
