media query done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <audio src="sound/slot-machine-payout.mp3" id="coinSound"></audio>
     <audio src="sound/success-fanfare.mp3" id="winSound"></audio>
 
-    <h1>ISLAND SLOTS</h1>
+    <h1 id="headline">ISLAND SLOTS</h1>
     <div class="board">
         <div id="purse" class="cells">PURSE: 1000</div>
         <div id="winnings" class="cells">WINNINGS: 0</div>
