grid system works, need to check mobile

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     <div class="board">
         <div id="purse" class="cells">PURSE: 1000</div>
         <div id="winnings" class="cells">WINNINGS: 0</div>
-        <h2 id="winLose">YOU LOSE</h2>
-        <button id="reset">RESET</button>
-
+        <div id="winLoseContainer">
+            <h2 id="winLose">YOU LOSE</h2>
+            <button id="reset">RESET</button>
+        </div>
+     
         <img id="spin1" class="spinners" src="img/pineapple.png">
         <img id="spin2" class="spinners" src="img/banana.png">
         <img id="spin3" class="spinners" src="img/mango.png">
 
-        <button id="wager1" class="bets">20</button>
-        <button id="wager2" class="bets">35</button>
-        <button id="wager3" class="bets">50</button>
+        <button id="wager1" class="bets">50</button>
+        <button id="wager2" class="bets">75</button>
+        <button id="wager3" class="bets">100</button>
 
         <div id="currentWager" class="cells">WAGER</div>
         <button id="play" class="cells">PLAY</button>
